--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
+# Ignore all CSV and model files
 *.csv
 *.pkl
+
+# Ignore Python cache and system files
 __pycache__/
 *.pyc
 *.DS_Store
+
+# Ignore temporary downloads or logs
+gdown/
+*.log
+
+# Specifically ignore large crime data files (redundant, but safe)
+Chicago_Crimes_2001_to_2004.csv
+Chicago_Crimes_2005_to_2007.csv
+Chicago_Crimes_2008_to_2011.csv
+Chicago_Crimes_2012_to_2017.csv
+crime_clustered_output.csv
+crime_kmeans_model.pkl
+crime_scaler.pkl
