--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 streamlit==1.35.0
 pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-plotly==5.22.0
-joblib==1.4.2
-gdown
-
+scikit-learn==1.3.2
+plotly==5.21.0
+gdown==5.2.0
